--- a/ressources/css/article.css
+++ b/ressources/css/article.css
@@ -5,47 +5,41 @@
 .image-article {
   display: flex;
   justify-content: center;
+  position: relative;
+  overflow: hidden;
+  transition: opacity 0.3s ease;
 }
 
-.avatar {
-  width: 5%;
-  height: 5%;
+.image-article:hover {
+  opacity: 0.8;
 }
 
-.image {
+.image-article img {
   width: 100%;
   height: auto;
 }
 
-.chapo {
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-top: 2rem;
-  margin-bottom: 1.5rem;
-  color: #4e4e4e;
-}
-
-.textebox {
-  font-size: 1.5rem;
-  font-weight:lighter;
-  margin-top: 1rem;
-  margin-bottom: 1.5rem;
-  color: #000000;
-  line-height: 1.5;
-}
-
 .auteur {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
+  margin-top: 1rem;
 }
 
-.header {
-  font-size: 2.25rem;
+.avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
+.avatar:hover {
+  transform: scale(1.2);
+}
+
+.nom-prenom {
+  color: #000000;
   font-weight: bold;
-  margin-bottom: 1.375rem;
-}
-
-.nom-prenom{
-  padding-left: 1rem;
+  margin-top: 0.5rem;
 }
